--- a/config-app-backend/src/main/resources/config.yaml
+++ b/config-app-backend/src/main/resources/config.yaml
@@ -1,13 +1,21 @@
 actions:
   - type: remove
     selector: ".ad-banner"
+    priority: 4
   - type: replace
     selector: "#old-header"
-    newElement: "<header id='new-header'>New Header</header>"
+    newElement: "<header id='new-header'>New Header 1</header>"
+    priority: 3
+  - type: replace
+    selector: "#old-header"
+    newElement: "<header id='new-header'>New Header 2</header>"
+    priority: 2
   - type: insert
     position: "after"
     target: "body"
     element: "<footer>Footer Content</footer>"
+    priority: 2
   - type: alter
     oldValue: "Machine Learning"
     newValue: "AI"
+    priority: 1
